@@ -104,6 +104,7 @@ class SpecialContributions extends SpecialPage {
 		$this->opts['nsInvert'] = (bool) $request->getVal( 'nsInvert' );
 
 		$this->opts['tagfilter'] = (string) $request->getVal( 'tagfilter' );
+		$this->opts['tagfilterdropdown'] = (string) $request->getVal( 'tagfilterdropdown', '' );
 
 		// Allows reverts to have the bot flag in recent changes. It is just here to
 		// be passed in the form at the top of the page
@@ -138,6 +139,9 @@ class SpecialContributions extends SpecialPage {
 			}
 			if ( $this->opts['tagfilter'] !== '' ) {
 				$apiParams['tagfilter'] = $this->opts['tagfilter'];
+			}
+			if ( $this->opts['tagfilterdropdown'] !== '' && $this->opts['tagfilterdropdown'] !== 'other' ) {
+				$apiParams['tagfilter'] = $this->opts['tagfilterdropdown'];
 			}
 			if ( $this->opts['namespace'] !== '' ) {
 				$apiParams['namespace'] = $this->opts['namespace'];
@@ -390,6 +394,10 @@ class SpecialContributions extends SpecialPage {
 			$this->opts['tagfilter'] = '';
 		}
 
+		if ( !isset( $this->opts['tagfilterdropdown'] ) ) {
+			$this->opts['tagfilterdropdown'] = '';
+		}
+
 		if ( !isset( $this->opts['topOnly'] ) ) {
 			$this->opts['topOnly'] = false;
 		}
@@ -405,12 +413,16 @@ class SpecialContributions extends SpecialPage {
 			$form .= "\t" . Html::hidden( $name, $value ) . "\n";
 		}
 
-		$tagFilter = ChangeTags::buildTagFilterSelector( $this->opts['tagfilter'] );
+		$tagFilter = ChangeTags::buildTagFilterWithDropdown(
+				'tag-filter-dropdown-list',
+				$this->opts['tagfilter'],
+				$this->opts['tagfilterdropdown']
+			);
 
 		if ( $tagFilter ) {
 			$filterSelection =
 				Xml::tags( 'td', array( 'class' => 'mw-label' ), array_shift( $tagFilter ) ) .
-				Xml::tags( 'td', array( 'class' => 'mw-input' ), implode( '&#160', $tagFilter ) );
+				Xml::tags( 'td', array( 'class' => 'mw-input' ), implode( '&#160;', $tagFilter ) );
 		} else {
 			$filterSelection = Xml::tags( 'td', array( 'colspan' => 2 ), '' );
 		}
